update version backbonejs mobile

--- a/app/assets/javascripts/kukariri_backbonejs/templates/items/new.haml.jst.ejs
+++ b/app/assets/javascripts/kukariri_backbonejs/templates/items/new.haml.jst.ejs
@@ -4,5 +4,9 @@
     %br
     %input{type: "text", id: "item_title", name: "item[title]"}
 
+  %p
+    %label{for: "item_pictures_attributes_0_pictures"}
+    %br
+    %input{type: "file", name: "item[pictures_attributes][0][picture]"
   .actions
     %input{type: "submit", name: "submit", value: "Valid"}
