--- a/app/assets/javascripts/kukariri_backbonejs/templates/items/new.haml.jst.ejs
+++ b/app/assets/javascripts/kukariri_backbonejs/templates/items/new.haml.jst.ejs
@@ -13,6 +13,6 @@
     %label{for: "item_pictures_attributes_0_pictures_attributes_0_types_attributes_0_descriptif"} = "descriptif"
     %br
     %input{type: "text", id: "item_pictures_attributes_O_types_attributes_0_descriptif", name: "item[pictures_attributes][0][types_attributes][0][descriptif]"}
-  
+
   .actions
-    %input{type: "submit", name: "submit", value: "Valid"}
+    %input{type: "submit", name: "submit", value: "Submit"}
