--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -5,7 +5,7 @@
     = stylesheet_link_tag("application", :media => "all")
     = javascript_include_tag(be_backbone? ? "rails/application" : "kukariri_backbonejs/application")
     = csrf_meta_tags
-  %body
+  %body.container-fluid
     %section.header
 
     %section.container
