--- a/app/assets/javascripts/kukariri_backbonejs/templates/items/new.haml.jst.ejs
+++ b/app/assets/javascripts/kukariri_backbonejs/templates/items/new.haml.jst.ejs
@@ -21,6 +21,10 @@
     %textarea{id: "item_types_attributes_0_descriptif", name: "item[types_attributes][0][descriptif]"}
       = item.types[0].descriptif
 
+  %p
+    %span.select_file
+      = "Select files"
+
   .actions
     %ul
       %li
