update version kukariri

--- a/app/assets/javascripts/kukariri_backbonejs/templates/items/new.haml.jst.ejs
+++ b/app/assets/javascripts/kukariri_backbonejs/templates/items/new.haml.jst.ejs
@@ -24,6 +24,8 @@
   %div#container
     %span#select_files
       = "Select files"
+    %div.pictures.master
+    %div.caroussel.other_pictures
 
   .actions
     %ul
