--- a/app/assets/javascripts/kukariri_backbonejs/templates/items/new.haml.jst.ejs
+++ b/app/assets/javascripts/kukariri_backbonejs/templates/items/new.haml.jst.ejs
@@ -26,6 +26,9 @@
       = "Select files"
     %div.pictures.master
     %div.caroussel.other_pictures
+      %ul
+        %li
+          = "test"
 
   .actions
     %ul
