--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -5,6 +5,8 @@
     = stylesheet_link_tag("application", :media => "all")
     = javascript_include_tag(be_backbone? ? "rails/application" : "kukariri_backbonejs/application")
     = csrf_meta_tags
+    - if protect_against_forgery?
+      %meta{:content => u(cookies[Rails.application.config.session_options[:key]]), :name => "session-key-value"}
   %body.container-fluid
     %section.header
 
