--- a/app/assets/javascripts/kukariri_backbonejs/templates/items/new.haml.jst.ejs
+++ b/app/assets/javascripts/kukariri_backbonejs/templates/items/new.haml.jst.ejs
@@ -24,10 +24,11 @@
   %div#container
     %span#select_files
       = "Select files"
-    %div.pictures.master
     %div.caroussel.other_pictures
       %ul
-
+        :each picture in pictures
+          %li
+            %img{ src: picture.picture.url}
   .actions
     %ul
       %li
