--- a/app/views/items/index.haml
+++ b/app/views/items/index.haml
@@ -16,6 +16,6 @@
       %td
         = link_to('Edit', "#/items/#{item.id}/edit")
       %td
-        = link_to('Destroy', item, method: :delete, data: { confirm: 'Are you sure?' })
+        = link_to('Destroy', "#/items/#{item.id}", method: :delete, data: { confirm: 'Are you sure?' })
 %br
 = link_to('New Item', "#/items/new")
