update version backbonejs

--- a/app/assets/javascripts/kukariri_backbonejs/templates/contacts/index.haml.jst.ejs
+++ b/app/assets/javascripts/kukariri_backbonejs/templates/contacts/index.haml.jst.ejs
@@ -25,3 +25,5 @@
         %a{href: "#/items/"+item_id+"/types/"+type_id+"/contacts/"+contact.id+"/delete", rel: "nofollow", data-confirm: "Are you sure ?"} 
           = "Destroy"
 
+%a{href: "#/items/"+item_id+"/types/"+type_id+"/contacts/new"} = "Ajouter un nouveau contact"
+
