update version kukariri_backbonejs

--- a/app/assets/javascripts/kukariri_backbonejs/templates/provided_dates/_form.haml.jst.ejs
+++ b/app/assets/javascripts/kukariri_backbonejs/templates/provided_dates/_form.haml.jst.ejs
@@ -7,7 +7,7 @@
 
 %div.date_to_activation
   %p
-    %label{for: "provided_date_date_to_activation", id: "provided_date_date_to_activation"} = "Programmer une date de retour"
-    %br
+    %span#span_provided_date_date_to_activation
+      %label{for: "provided_date_date_to_activation"} = "Programmer une date de retour"
     %input{type: "checkbox", name: "provided_date[date_to_activation]", id: "provided_date_date_to_activation", value: provided_date.date_to_activation}
     
