update version backbonejs kukariri

--- a/app/assets/javascripts/kukariri_backbonejs/templates/contacts/index.haml.jst.ejs
+++ b/app/assets/javascripts/kukariri_backbonejs/templates/contacts/index.haml.jst.ejs
@@ -11,19 +11,10 @@
     %th
       = "Destroy"
   :each contact in contacts
-    %tr
+    %tr.contact_lists{id: "contact_lists_"+contact.id}
       %td
         = "checkbox" 
       %td
         = contact.lastname
       %td
         = contact.firstname
-      %td
-        %a{href: "#/items/"+item_id+"/types/"+type_id+"/contacts/"+contact.id+"/edit"} 
-          = "Edit"
-      %td
-        %a{href: "#/items/"+item_id+"/types/"+type_id+"/contacts/"+contact.id+"/delete", rel: "nofollow", data-confirm: "Are you sure ?"} 
-          = "Destroy"
-
-%a{href: "#/items/"+item_id+"/types/"+type_id+"/contacts/new"} = "Ajouter un nouveau contact"
-
