--- a/app/views/items/index.haml
+++ b/app/views/items/index.haml
@@ -17,5 +17,10 @@
         = link_to('Edit', "/#/items/#{item.id}/edit")
       %td
         = link_to('Destroy', "/#/items/#{item.id}", method: :delete, data: { confirm: 'Are you sure?' })
-%br
-= link_to('New Item', "/#/items/new")
+%ul
+  %li
+    = link_to("Contact list", "/#/contacts")
+  %li
+    = link_to("New Contact", "/#/contacts/new")
+  %li
+    = link_to('New Item', "/#/items/new")
