update version kukariri_backbonejs

--- a/app/assets/javascripts/kukariri_backbonejs/templates/contacts/_contact_edit_delete_no_item.haml.jst.ejs
+++ b/app/assets/javascripts/kukariri_backbonejs/templates/contacts/_contact_edit_delete_no_item.haml.jst.ejs
@@ -2,5 +2,5 @@
   %a{href: "#/contacts/"+contact.id+"/edit"}
     = "Edit"
 %td
-  %a{href: "#/contacts/delete", rel: "nofollow", data-confirm: "Are you sure ?"}
+  %a{href: "#/contacts/"+contact.id+"/delete", rel: "nofollow", data-confirm: "Are you sure ?"}
     = "Destroy"
