--- a/app/assets/javascripts/kukariri_backbonejs/templates/contacts/_contact_edit_delete_with_item.haml.jst.ejs
+++ b/app/assets/javascripts/kukariri_backbonejs/templates/contacts/_contact_edit_delete_with_item.haml.jst.ejs
@@ -3,3 +3,4 @@
     = "Edit"
 %td
   %a{href: "#/items/"+item_id+"/types/"+type_id+"/contacts/"+contact.id+"/delete", rel: "nofollow", data-confirm: "Are you sure ?"}
+    = "Destroy"
