update version backbonejs mobile

--- a/app/assets/javascripts/kukariri_backbonejs/templates/items/new.haml.jst.ejs
+++ b/app/assets/javascripts/kukariri_backbonejs/templates/items/new.haml.jst.ejs
@@ -1,6 +1,6 @@
 %form#edit_items
   %p
-    %label{for: "item_title"} = "Title"
+    %label{for: "item_title"} = translates.items.edit.title
     %br
     %input{type: "text", id: "item_title", name: "item[title]", value: item.title}
 
