--- a/app/assets/javascripts/kukariri_backbonejs/templates/contacts/_contact_edit_delete_with_item.haml.jst.ejs
+++ b/app/assets/javascripts/kukariri_backbonejs/templates/contacts/_contact_edit_delete_with_item.haml.jst.ejs
@@ -1,6 +1,6 @@
 %td
   %a{href: "#/items/"+item_id+"/types/"+type_id+"/contacts/"+contact.id+"/edit"}
-    = "Edit"
+    = translate.contacts.index.edit
 %td
-  %a{href: "#/items/"+item_id+"/types/"+type_id+"/contacts/"+contact.id+"/delete", rel: "nofollow", data-confirm: "Are you sure ?"}
-    = "Destroy"
+  %a{href: "#/items/"+item_id+"/types/"+type_id+"/contacts/"+contact.id+"/delete", rel: "nofollow", data-confirm: translate.common_sentence.confirm_delete}
+    = translate.contacts.index.destroy
