--- a/app/assets/javascripts/kukariri_backbonejs/templates/contacts/edit.haml.jst.ejs
+++ b/app/assets/javascripts/kukariri_backbonejs/templates/contacts/edit.haml.jst.ejs
@@ -2,5 +2,5 @@
   %div.actions
     %fieldset
     %p
-      %input{type: "submit", value: "Submit"}
+      %input{type: "submit", value: translate.common_button.submit}
 
