update version kukariri_backbonejs translation

--- a/app/assets/javascripts/kukariri_backbonejs/templates/contacts/index.haml.jst.ejs
+++ b/app/assets/javascripts/kukariri_backbonejs/templates/contacts/index.haml.jst.ejs
@@ -3,9 +3,9 @@
     %th
       = translate.contacts.index.assoc_contact
     %th
-      = translate.contacts.index.lastname
+      = translate.activerecord.attributes.contact.lastname
     %th
-      = translate.contacts.index.firstname
+      = translate.activerecord.attributes.contact.firstname
     %th
       = translate.contacts.index.edit
     %th
