--- a/app/assets/javascripts/kukariri_backbonejs/templates/contacts/new.haml.jst.ejs
+++ b/app/assets/javascripts/kukariri_backbonejs/templates/contacts/new.haml.jst.ejs
@@ -2,4 +2,4 @@
   %div.actions
     %fieldset
     %p
-      %input{type: "submit", value: "Submit"}
+      %input{type: "submit", value: translate.common_button.submit}
