--- a/app/assets/javascripts/kukariri_backbonejs/templates/provided_dates/_form.haml.jst.ejs
+++ b/app/assets/javascripts/kukariri_backbonejs/templates/provided_dates/_form.haml.jst.ejs
@@ -1,14 +1,14 @@
 :if provided_date.id == undefined
   %input{type: "hidden", name: "provided_date[id]", id: "provided_date_id", value: provided_date.id}
 %p
-  %label{for: "provided_date_at"} = "Date at"
+  %label{for: "provided_date_at"} = translate.activerecord.attributes.provided_date.date_at
   %br
   %input{type: "text", id: "provided_date_at", name: "provided_date[date_at]", value: provided_date.date_at}
 
 %div.date_to_activation
   %p
     %span#span_provided_date_date_to_activation
-      %label{for: "provided_date_date_to_activation"} = "Programmer une date de retour"
+      %label{for: "provided_date_date_to_activation"} = translate.activerecord.attributes.provided_date.date_to_activation
     %input{type: "hidden", name: "provided_date[date_to_activation]", id: "provided_date_date_to_activation", value: provided_date.date_to_activation}
     :if provided_date.date_to_activation 
       %div.iphone-style.on{rel: "sample-checkbox-1", style: "background-position: 100% O%;"}
