update version kukariri_backbonejs

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -17,6 +17,9 @@
         %li
           = link_to("New Item", "/#/items/new")
 
+    %section.notice
+      %ul
+
     %section.container
       = yield
       .modal
