--- a/app/assets/javascripts/kukariri_backbonejs/templates/items/new.haml.jst.ejs
+++ b/app/assets/javascripts/kukariri_backbonejs/templates/items/new.haml.jst.ejs
@@ -2,22 +2,29 @@
   %p
     %label{for: "item_title"} = translate.items.edit.title
     %br
-    %input{type: "text", id: "item_title", name: "item[title]", value: item.title}
+    :if _.isEqual(page, "new")
+      %input{type: "text", id: "item_title", name: "item[title]", placeholder: translate.items.form_common.placeholder.title}
+    :if !_.isEqual(page, "new")
+      %input{type: "text", id: "item_title", name: "item[title]", value: item.title}
 
   %p
     %label{for: "item_types_attributes_0_descriptif"} = translate.items.edit.description
     %br
-    %textarea{id: "item_types_attributes_0_descriptif", name: "item[types_attributes][0][descriptif]"}
-      = item.types[0].descriptif
+    :if _.isEqual(page, "new")
+      %textarea{id: "item_types_attributes_0_descriptif", name: name_type, placeholder: translate.types.form_common.placeholder.descriptif}
+    :if !_.isEqual(page, "new")
+      %textarea{id: "item_types_attributes_0_descriptif", name: name_type}
+        = item.types[0].descriptif
 
   %div#container
     %span#select_files
       = translate.items.edit.select_files
     %div.caroussel.other_pictures
       %ul
-        :each picture in pictures
-          %li{class: 'picture_sort', id: picture.id}
-            %img{ src: picture.picture.url}
+        :if !_.isEqual(page, "new")
+          :each picture in pictures
+            %li{class: 'picture_sort', id: picture.id}
+              %img{ src: picture.picture.url}
   .actions
     %ul
       %li
