update version kukariri backbonejs

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -11,11 +11,11 @@
     %section.header
       %ul
         %li
-          = link_to("New Contact", "/#/contacts/new")
+          = link_to(t("contacts.new_contact"), "/#/contacts/new")
         %li
-          = link_to("Contact list", "/#/contacts")
+          = link_to(t("contacts.contact_lists"), "/#/contacts")
         %li
-          = link_to("New Item", "/#/items/new")
+          = link_to(t("items.new_item"), "/#/items/new")
 
     %section.notice
       %ul
