--- a/app/assets/stylesheets/items.css.sass
+++ b/app/assets/stylesheets/items.css.sass
@@ -1,3 +1,12 @@
 // Place all the styles related to the items controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+body
+  .container
+    form#edit_items
+      div#container
+        div.caroussel
+          ul.ui-sortable
+            li
+              :list-style-type none
+
