--- a/app/assets/javascripts/kukariri_backbonejs/templates/pictures/pictures.haml.jst.ejs
+++ b/app/assets/javascripts/kukariri_backbonejs/templates/pictures/pictures.haml.jst.ejs
@@ -1,12 +1,12 @@
-%li{class: 'picture_sort', id: 'picture_'+picture_id}
+%li{class: 'picture_sort', id: 'picture_'+picture.id}
   %div.img_picture_url 
-    %img{ src: picture.url, alt: picture.picture_file_name}
+    %img{src: picture.picture.url}
   %div.img_button_admin_img
     %ul
       %li
-        %a{href: "#/pictures/edit/"+picture_id}
+        %a{href: "#/pictures/edit/"+picture.id}
           = translate.common_link.update
       %li
-        %a{href: "#/pictures/edit/"+picture_id}
+        %a{href: "#/pictures/edit/"+picture.id}
           = translate.common_link.delete
     
