update version kuakriri_backbonejs

--- a/app/assets/javascripts/kukariri_backbonejs/templates/provided_dates/_form_date_to.haml.jst.ejs
+++ b/app/assets/javascripts/kukariri_backbonejs/templates/provided_dates/_form_date_to.haml.jst.ejs
@@ -1,5 +1,5 @@
 %p
-  %label{for: "provided_date_date_to"} = translate.activerecord.provided_date.date_to
+  %label{for: "provided_date_date_to"} = translate.activerecord.attributes.provided_date.date_to
   %br
   :if _.isEqual(page, "new")
     %input{type: "text", id: "provided_date_date_to", name: "provided_date[date_to]", placeholder: provided_date.date_to}
