--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -11,6 +11,8 @@
     %section.header
       %ul
         %li
+          = link_to(t("items.items_list"), items_path)
+        %li
           = link_to(t("contacts.new_contact"), "/#/contacts/new")
         %li
           = link_to(t("contacts.contact_lists"), "/#/contacts")
