update version kukariri backbonejs

--- a/app/assets/stylesheets/layout/application.css.sass
+++ b/app/assets/stylesheets/layout/application.css.sass
@@ -3,6 +3,8 @@
   :padding-right 0px 
 body
   section.header
+    :width 100%
+    :position fixed
     :background-color #3B5998
     :height 40px
     ul
@@ -21,3 +23,10 @@ body
           :color white
         a:hover
           :background-color #4b67a1
+    div
+      :margin-right 21px
+      :float right
+      ul
+
+  section.container
+    :margin-top 60px
