update version backbonejs kukariri

--- a/app/assets/javascripts/kukariri_backbonejs/templates/items/new.haml.jst.ejs
+++ b/app/assets/javascripts/kukariri_backbonejs/templates/items/new.haml.jst.ejs
@@ -17,11 +17,11 @@
         = item.types[0].descriptif
 
   %div#container
-    %ul
-      %li
+    %ul.grid.row-fluid
+      %li.span6
         %span#select_files
           = translate.items.edit.select_files
-      %li
+      %li.span6
         %span#cam_active
           = "Use webcam to take photo"
     %div.caroussel.other_pictures
