update version kukarriri css

--- a/app/assets/stylesheets/layout/application.css.sass
+++ b/app/assets/stylesheets/layout/application.css.sass
@@ -13,8 +13,6 @@ body
       :background-color transparent
       :list-style-type none
       li
-        :margin-left 20px
-        :float left
         a
           display: table-cell
           vertical-align: middle
@@ -24,7 +22,7 @@ body
         a:hover
           :background-color #4b67a1
     div
-      :margin-right 21px
+      :margin-right 2%
       :float right
       ul
 
