update version kukariri css

--- a/app/assets/stylesheets/pages/items.css.sass
+++ b/app/assets/stylesheets/pages/items.css.sass
@@ -4,9 +4,8 @@
 body
   .container
     form#edit_items
+      ul
+        :list-style-type none
       div#container
         div.caroussel
-          ul.ui-sortable
-            li
-              :list-style-type none
 
